# susan_apps

./: CMakeLists.txt  README.md  package.xml
launch/: move_to_point.launch
scripts/: move_to_point.py  trajectory_generator.py
