<?xml version="1.0"?>
<package format="2">
  <name>susan_apps</name>
  <version>0.0.0</version>
  <description>The susan_apps package</description>
  <maintainer email="hanzx@u.northwestern.edu">Zhengxiao Han</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib</depend>
</package>
